--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
 Souad Helmy ELsayed <soadhamy98@mail.com>
-Amr Sayed <amrsayedhk@gmail.com>
+Moamen Kadry Shehab <memo.shehab30@gmail.com>
+
